<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".FragmentMoviesList">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background_primary">

    <Button
        android:id="@+id/movies_list_main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:text="Movies list"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_combined_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/movie_card"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/background_primary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movies_list_main_btn"
        app:rippleColor="@android:color/transparent"
        app:strokeColor="@color/cardview_dark_background"
        app:strokeWidth="1dp">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/bg">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="Avengers Poster"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers_poster" />

        <View
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_to_top_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/movie_poster"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/movie_list_rating"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="@drawable/rect_rounded"
            android:gravity="center"
            android:text="13+"
            android:textColor="@color/text_primary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/movie_genre"
            android:textColor="@color/text_accent"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_rating"
            app:layout_constraintStart_toStartOf="@+id/movie_rating" />

        <RatingBar
            android:id="@+id/movie_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="10dp"
            android:isIndicator="true"
            android:numStars="5"
            android:padding="0dp"

            android:rating="4"
            android:theme="@style/StyleRatingBar"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_review_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating"
            app:layout_constraintStart_toEndOf="@id/movie_rating"
            app:layout_constraintTop_toTopOf="@id/movie_rating" />

        <TextView
            android:id="@+id/movie_title"
            android:text="@string/movie_title"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"/>

        <TextView
            android:id="@+id/movie_length"
            android:text="137 min"
            android:textColor="@color/text_secondary"
            android:textSize="8sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="298dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:background="@drawable/bottom_to_top_gradient"-->
    <!--        app:layout_constraintStart_toStartOf="@id/imageView"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/imageView"-->
    <!--        app:layout_constraintTop_toTopOf="@id/imageView"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/imageView" />-->

    <!--    <Button-->
    <!--        style="@style/Widget.AppCompat.Button.Borderless"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="55dp"-->
    <!--        android:text="@string/btn_back"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
    <!--        android:textColor="@color/text_button"-->
    <!--        app:drawableLeftCompat="@drawable/ic_back_btn"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_left"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintGuide_begin="16dp" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_right"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintGuide_end="16dp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/age"-->
    <!--        android:text="@string/movie_age"-->
    <!--        android:textColor="@color/text_secondary"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="12dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/movie_title"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_title"-->
    <!--        android:text="@string/movie_title"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="40sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/imageView"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/imageView"/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_genre"-->
    <!--        android:text="@string/movie_genre"-->
    <!--        android:textColor="@color/text_accent"-->
    <!--        android:textSize="14sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_title" />-->

    <!--    <RatingBar-->
    <!--        android:id="@+id/movie_rating"-->
    <!--        style="@style/Widget.AppCompat.RatingBar.Small"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:numStars="5"-->
    <!--        android:rating="4"-->
    <!--        android:theme="@style/StyleRatingBar"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/movie_rating"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
    <!--        app:layout_constraintTop_toTopOf="@id/movie_review_counter"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/movie_review_counter"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_review_counter"-->
    <!--        android:text="@string/_125_reviews"-->
    <!--        android:textAllCaps="true"-->
    <!--        android:textColor="@color/text_secondary"-->
    <!--        android:textSize="14sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        app:layout_constraintStart_toEndOf="@id/movie_rating"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_genre" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_storyline_header"-->
    <!--        android:text="@string/movie_storyline_header"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="14sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_review_counter" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_storyline"-->
    <!--        android:text="@string/movie_storyline"-->
    <!--        android:textColor="@color/text_secondary"-->
    <!--        android:textSize="14sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_storyline_header" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/movie_cast_header"-->
    <!--        android:text="@string/movie_cast_header"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="14sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_storyline" />-->

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/imgDowney"-->
    <!--        style="@style/StyleImageActor"-->
    <!--        android:contentDescription="@string/movie_actor_photo_description_downey"-->
    <!--        android:layout_marginTop="7dp"-->
    <!--        app:srcCompat="@drawable/downey"-->
    <!--        app:shapeAppearanceOverlay="@style/circleImageViewStyle"-->
    <!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/imgEvans"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/movie_cast_header"-->
    <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textDowney"-->
    <!--        android:text="@string/movie_actor_downey"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/imgDowney"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/imgDowney"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imgDowney" />-->

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/imgEvans"-->
    <!--        style="@style/StyleImageActor"-->
    <!--        android:contentDescription="@string/movie_actor_photo_description_evans"-->
    <!--        android:layout_marginTop="7dp"-->
    <!--        app:srcCompat="@drawable/evans"-->
    <!--        app:shapeAppearanceOverlay="@style/circleImageViewStyle"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/imgRuffalo"-->
    <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--        app:layout_constraintStart_toEndOf="@id/imgDowney"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_cast_header"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textEvans"-->
    <!--        android:text="@string/movie_actor_evans"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/imgEvans"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/imgEvans"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imgEvans" />-->

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/imgRuffalo"-->
    <!--        style="@style/StyleImageActor"-->
    <!--        android:contentDescription="@string/movie_actor_photo_description_ruffalo"-->
    <!--        android:layout_marginTop="7dp"-->
    <!--        app:srcCompat="@drawable/ruffalo"-->
    <!--        app:shapeAppearanceOverlay="@style/circleImageViewStyle"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/imgHemsWorth"-->
    <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--        app:layout_constraintStart_toEndOf="@id/imgEvans"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_cast_header"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textRuffalo"-->
    <!--        android:text="@string/movie_actor_ruffalo"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/imgRuffalo"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/imgRuffalo"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imgRuffalo" />-->

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/imgHemsWorth"-->
    <!--        style="@style/StyleImageActor"-->
    <!--        android:contentDescription="@string/movie_actor_photo_description_hemsworth"-->
    <!--        android:layout_marginTop="7dp"-->
    <!--        app:srcCompat="@drawable/hemsworth"-->
    <!--        app:shapeAppearanceOverlay="@style/circleImageViewStyle"-->
    <!--        app:layout_constraintStart_toEndOf="@id/imgRuffalo"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/movie_cast_header"-->
    <!--        app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textHemsworth"-->
    <!--        android:text="@string/movie_actor_hemsworth"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="12sp"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/imgHemsWorth"-->
    <!--        app:layout_constraintStart_toStartOf="@id/imgHemsWorth"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/imgHemsWorth" />-->

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
